change api to do IdMessage
