# pkg/api/oas_unimplemented_gen.go
@@ -18,7 +18,7 @@ var _ Handler = UnimplementedHandler{}
 // Create new submission.
 //
 // POST /submissions
-func (UnimplementedHandler) CreateSubmission(ctx context.Context) (r *Submission, _ error) {
+func (UnimplementedHandler) CreateSubmission(ctx context.Context) (r *ID, _ error) {
 	return r, ht.ErrNotImplemented
 }
 
